MyOrg/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Acc_Name__c</fullName>
        <label>Acc Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EEE</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>CIVIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Applicable_in__c</fullName>
        <label>Discount Applicable(in %)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dummy_Field__c</fullName>
        <label>Dummy Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Amount__c</fullName>
        <formula>Actual_Amount__c  - (Actual_Amount__c * (Discount_Applicable_in__c /100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_PickList__c</fullName>
        <label>My PickList</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Check_Box__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Amount__c</fullName>
        <label>Orders Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherAccId__c</fullName>
        <label>OtherAccId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piclist_1__c</fullName>
        <label>Piclist 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Piclist_2__c</fullName>
        <label>Piclist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Piclist_3__c</fullName>
        <label>Piclist 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASDF</fullName>
                </value>
                <value>
                    <fullName>SDF</fullName>
                </value>
                <value>
                    <fullName>DFGH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <label>Subjects</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Branch__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>Electrical Machines</fullName>
                </value>
                <value>
                    <fullName>Embeeded</fullName>
                </value>
                <value>
                    <fullName>VSDL</fullName>
                </value>
                <value>
                    <fullName>Concrete Technology</fullName>
                </value>
                <value>
                    <fullName>Stength Of Materials</fullName>
                </value>
                <value>
                    <fullName>MEFA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>This_iS_User_Email__c</fullName>
        <label>This iS User Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_contacts_count__c</fullName>
        <label>Total_contacts_count</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailAddress__c</fullName>
        <label>emailAddress</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>logo__c</fullName>
        <label>logo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tackfield__c</fullName>
        <displayFormat>t-{0000}</displayFormat>
        <label>tackfield</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>tackfield__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>test_1</fullName>
        <active>true</active>
        <label>test 1</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>accept_only_alpha_character</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISBLANK(logo__c ) , false,OR( NOT(REGEX( logo__c , &quot;[a-zA-Z0-9&apos; &apos;]+&quot;)),IF(LEN( logo__c )==3,false,true) ))</errorConditionFormula>
        <errorDisplayField>logo__c</errorDisplayField>
        <errorMessage>only 3 Alpha characters Allowed</errorMessage>
    </validationRules>
</CustomObject>